fix(menu): Add brightness filter to menu icons and remove extra whitespace
Added filter: brightness(0) invert(1) to menu icons for better visibility and removed unnecessary whitespace in the menu.less file.

--- a/core/menu/css/menu.less
+++ b/core/menu/css/menu.less
@@ -461,6 +461,7 @@
 				height: 2rem;
 				margin-right: 0.5rem;
 				cursor: pointer;
+				filter: brightness(0) invert(1);
 
 				&:active {
 					opacity: 0.4;
@@ -526,7 +527,7 @@
 					}
 				}
 
-			
+
 			}
 	}//end content_data
 
